--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Install Docker Compose
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker-compose
+        
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
